--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
       --pill-red-bg: rgba(239,68,68,.10);
       --pill-amber-bg: rgba(245,158,11,.12);
       --pill-green-bg: rgba(16,185,129,.12);
+      --pill-blue-bg: rgba(59,130,246,.12);
 
       --pill-red-text: #b91c1c;
       --pill-amber-text: #92400e;
       --pill-green-text: #065f46;
+      --pill-blue-text: #1d4ed8;
 
       --divider: rgba(17,24,39,.06);
     }
@@ -277,13 +279,14 @@
       margin: 10px -10px 10px -10px;
     }
 
-    /* Pills on one row: 4 cols by default; 3 cols when no TP2 */
+    /* Pills on one row: 4 cols by default; 5 cols when TP2 exists */
     .pills{
       display: grid;
       gap: 8px;
       grid-template-columns: repeat(4, 1fr);
     }
     .pills.cols-3{ grid-template-columns: repeat(3, 1fr); }
+    .pills.cols-5{ grid-template-columns: repeat(5, 1fr); }
 
     .pill{
       display:flex;
@@ -311,6 +314,7 @@
     .pill.red{ background: var(--pill-red-bg); color: var(--pill-red-text); }
     .pill.amber{ background: var(--pill-amber-bg); color: var(--pill-amber-text); }
     .pill.green{ background: var(--pill-green-bg); color: var(--pill-green-text); }
+    .pill.blue{ background: var(--pill-blue-bg); color: var(--pill-blue-text); }
 
     .overlay{
       position: fixed;
@@ -474,6 +478,10 @@
             <input id="fSupport" inputmode="decimal" placeholder="14.00" />
           </div>
           <div class="field">
+            <label>突破位</label>
+            <input id="fBreakout" inputmode="decimal" placeholder="16.00" />
+          </div>
+          <div class="field">
             <label>止盈1</label>
             <input id="fTp1" inputmode="decimal" placeholder="19.00" />
           </div>
@@ -496,8 +504,10 @@
     const LS_KEY = "strategy_cards_frontend_only_v3";
     const LS_DRAFT_KEY = "strategy_cards_form_draft_v2";
 
-    /** @type {{id:string, symbol:string, price:number, status:string, updatedAt:string, stop:number, support:number, tp1:number, tp2:(number|null), name?:string, marketCode?:string}[]} */
+    /** @type {{id:string, symbol:string, price:number, status:string, updatedAt:string, stop:number, support:number, breakout:number, tp1:number, tp2:(number|null), name?:string, marketCode?:string}[]} */
     let items = load() ?? [];
+
+    items = migrateItems(items);
 
     function load(){
       try{
@@ -509,6 +519,27 @@
       }catch(_){
         return null;
       }
+    }
+
+
+    function migrateItems(arr){
+      if(!Array.isArray(arr)) return [];
+      return arr.map((x) => {
+        const it = (x && typeof x === "object") ? x : {};
+        // Add new field: breakout. If missing, default to support (best-effort).
+        const support = Number(it.support);
+        const breakout = Number.isFinite(Number(it.breakout)) ? Number(it.breakout) :
+                         (Number.isFinite(support) ? support : 0);
+        const tp2 = (it.tp2 === null || it.tp2 === undefined || it.tp2 === "") ? null : Number(it.tp2);
+        return {
+          ...it,
+          stop: Number(it.stop),
+          support: support,
+          breakout: breakout,
+          tp1: Number(it.tp1),
+          tp2: (Number.isFinite(tp2) ? tp2 : null),
+        };
+      });
     }
 
     function persist(){
@@ -647,7 +678,7 @@
 
       items.forEach((it) => {
         const hasTp2 = Number.isFinite(it.tp2);
-        const colsClass = hasTp2 ? "cols-4" : "cols-3";
+        const colsClass = hasTp2 ? "cols-5" : "cols-4";
 
         const card = document.createElement("div");
         card.className = "card";
@@ -714,6 +745,10 @@
                 <div class="k">支撑</div>
                 <div class="v">${formatCNY(it.support)}</div>
               </div>
+              <div class="pill blue">
+                <div class="k">突破位</div>
+                <div class="v">${formatCNY(it.breakout)}</div>
+              </div>
               <div class="pill green">
                 <div class="k">止盈1</div>
                 <div class="v">${formatCNY(it.tp1)}</div>
@@ -770,6 +805,7 @@
     const fSymbol = document.getElementById("fSymbol");
     const fStop = document.getElementById("fStop");
     const fSupport = document.getElementById("fSupport");
+    const fBreakout = document.getElementById("fBreakout");
     const fTp1 = document.getElementById("fTp1");
     const fTp2 = document.getElementById("fTp2");
     const btnClose = document.getElementById("btnClose");
@@ -781,11 +817,12 @@
         saveDraft({
           stop: fStop.value.trim(),
           support: fSupport.value.trim(),
+          breakout: fBreakout.value.trim(),
           tp1: fTp1.value.trim(),
           tp2: fTp2.value.trim(),
         });
       };
-      [fStop, fSupport, fTp1, fTp2].forEach(el => el.addEventListener("input", handler));
+      [fStop, fSupport, fBreakout, fTp1, fTp2].forEach(el => el.addEventListener("input", handler));
     }
     wireDraft();
 
@@ -802,6 +839,7 @@
         fSymbol.value = "";
         fStop.value = d.stop ?? "";
         fSupport.value = d.support ?? "";
+        fBreakout.value = d.breakout ?? "";
         fTp1.value = d.tp1 ?? "";
         fTp2.value = d.tp2 ?? "";
       }else{
@@ -811,6 +849,7 @@
         fSymbol.value = it.symbol;
         fStop.value = String(it.stop ?? "");
         fSupport.value = String(it.support ?? "");
+        fBreakout.value = String(it.breakout ?? "");
         fTp1.value = String(it.tp1 ?? "");
         fTp2.value = (Number.isFinite(it.tp2) ? String(it.tp2) : "");
       }
@@ -847,6 +886,7 @@
       const symbol = fSymbol.value.trim();
       const stop = parseNum(fStop.value);
       const support = parseNum(fSupport.value);
+      const breakout = parseNum(fBreakout.value);
       const tp1 = parseNum(fTp1.value);
       const tp2 = parseOptionalNum(fTp2.value);
 
@@ -855,8 +895,8 @@
         fSymbol.focus();
         return;
       }
-      if(!Number.isFinite(stop) || !Number.isFinite(support) || !Number.isFinite(tp1)){
-        toast("止损/支撑/止盈1 请输入有效数字");
+      if(!Number.isFinite(stop) || !Number.isFinite(support) || !Number.isFinite(breakout) || !Number.isFinite(tp1)){
+        toast("止损/支撑/突破位/止盈1 请输入有效数字");
         return;
       }
       if(tp2 !== null && !Number.isFinite(tp2)){
@@ -875,7 +915,7 @@
           price: 0.00,
           status: "监控中",
           updatedAt: "--:--:--",
-          stop, support, tp1, tp2
+          stop, support, breakout, tp1, tp2
         };
         items.unshift(it);
       }else{
@@ -884,6 +924,7 @@
         it.symbol = symbol;
         it.stop = stop;
         it.support = support;
+        it.breakout = breakout;
         it.tp1 = tp1;
         it.tp2 = tp2;
       }
@@ -936,10 +977,11 @@
           it.updatedAt = q.time || nowTime();
           it.name = q.name || it.name;
 
-          // status rule: <= stop => 已止损; >= tp2 => 已止盈2; >= tp1 => 已止盈1; else 监控中
+          // status rule: <= stop => 已止损; >= tp2 => 已止盈2; >= tp1 => 已止盈1; >= breakout => 已突破; else 监控中
           if (Number(it.price) <= Number(it.stop)) it.status = "已止损";
           else if (Number.isFinite(it.tp2) && Number(it.price) >= Number(it.tp2)) it.status = "已止盈2";
           else if (Number(it.price) >= Number(it.tp1)) it.status = "已止盈1";
+          else if (Number(it.price) >= Number(it.breakout)) it.status = "已突破";
           else it.status = "监控中";
         }
 
@@ -975,6 +1017,7 @@
         if (Number(it.price) <= Number(it.stop)) it.status = "已止损";
         else if (Number.isFinite(it.tp2) && Number(it.price) >= Number(it.tp2)) it.status = "已止盈2";
         else if (Number(it.price) >= Number(it.tp1)) it.status = "已止盈1";
+        else if (Number(it.price) >= Number(it.breakout)) it.status = "已突破";
         else it.status = "监控中";
       }catch(e){
         it.status = "更新失败";
