--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2064%2064%22%3E%20%3Cdefs%3E%20%3ClinearGradient%20id=%22g%22%20x1=%220%22%20x2=%221%22%20y1=%221%22%20y2=%220%22%3E%20%3Cstop%20offset=%220%22%20stop-color=%22#2563eb%22/%3E%20%3Cstop%20offset=%221%22%20stop-color=%22#22c55e%22/%3E%20%3C/linearGradient%3E%20%3C/defs%3E%20%3Crect%20x=%226%22%20y=%228%22%20width=%2252%22%20height=%2248%22%20rx=%2214%22%20fill=%22url(#g)%22/%3E%20%3Cpath%20d=%22M18%2041l10-12%208%209%2012-18%22%20fill=%22none%22%20stroke=%22#fff%22%20stroke-width=%225%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22/%3E%20%3Cpath%20d=%22M18%2046h28%22%20fill=%22none%22%20stroke=%22rgba(255,255,255,.85)%22%20stroke-width=%224%22%20stroke-linecap=%22round%22/%3E%20%3C/svg%3E">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>股票策略卡</title>
   <style>
@@ -84,6 +85,27 @@
       margin: 0;
       line-height: 1.5;
     }
+
+    /* Brand (vector) */
+    .title{
+      display:flex;
+      align-items:center;
+      gap: 10px;
+    }
+    .logo{
+      display:inline-flex;
+      width: 22px;
+      height: 22px;
+      flex: 0 0 auto;
+      border-radius: 8px;
+      overflow:hidden;
+      box-shadow: 0 6px 16px rgba(17,24,39,.10);
+    }
+    .title-text{
+      display:inline-block;
+      min-width: 0;
+    }
+
 
     .header-row{
       display:flex;
@@ -426,7 +448,18 @@
     <div class="header">
       <div class="header-row">
     <div class="title-wrap">
-      <div class="title">股票策略卡</div>
+      <div class="title"><span class="logo" aria-hidden="true">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" width="22" height="22" focusable="false">
+          <defs>
+            <linearGradient id="lg" x1="0" x2="1" y1="1" y2="0">
+              <stop offset="0" stop-color="#2563eb"/>
+              <stop offset="1" stop-color="#22c55e"/>
+            </linearGradient>
+          </defs>
+          <rect x="6" y="8" width="52" height="48" rx="14" fill="url(#lg)"/>
+          <path d="M18 41l10-12 8 9 12-18" fill="none" stroke="#fff" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </span><span class="title-text">股票策略卡</span></div>
       <p class="subtitle">多股票决策辅助工具</p>
     </div>
 
