--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       justify-content:space-between;
       gap: 10px;
     }
-    .codes{ min-width: 0; }
+    .codes{ min-width: 0; position: relative; padding-right: 64px; }
     .codes .big{
       font-size: 20px;
       font-weight: 900;
@@ -224,6 +224,29 @@
       white-space: nowrap;
       max-width: 310px;
     }
+
+    .chg-badge{
+      position:absolute;
+      top: -4px;
+      right: -5px;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding: 6px 8px;
+      border-radius: 12px;
+      font-weight: 950;
+      font-size: 18px;
+      letter-spacing: .1px;
+      white-space: nowrap;
+      min-width: 58px;
+      line-height: 1;
+      background: rgba(17,24,39,.06);
+      color: var(--muted);
+    }
+    .chg-badge.up{ background: rgba(239,68,68,.10); color: var(--red); }
+    .chg-badge.down{ background: rgba(16,185,129,.12); color: var(--green-deep); }
+    .chg-badge.flat{ background: rgba(17,24,39,.06); color: var(--muted); }
+
 
     .card-tools{
       display:flex;
@@ -844,6 +867,20 @@
           else if(cur < prev) priceDirClass = "down";
         }
 
+                // pct change badge (does not affect layout height: absolutely positioned)
+        let chgPct = NaN;
+        if(Number.isFinite(prev) && prev > 0 && Number.isFinite(cur)){
+          chgPct = (cur - prev) / prev * 100;
+        }
+        let chgClass = "flat";
+        let chgText = "--";
+        if(Number.isFinite(chgPct)){
+          if(chgPct > 1e-8) chgClass = "up";
+          else if(chgPct < -1e-8) chgClass = "down";
+          const sign = chgPct > 0 ? "+" : "";
+          chgText = `${sign}${chgPct.toFixed(2)}%`;
+        }
+
         const card = document.createElement("div");
         card.className = "card";
 
@@ -856,6 +893,7 @@
               <div class="codes">
                 <p class="big">${bigTitle}</p>
                 <p class="small">${sub}</p>
+                <div class="chg-badge ${chgClass}" title="涨跌幅">${escapeHtml(chgText)}</div>
               </div>
               <div class="card-tools">
                 <button class="tool sort-only" data-act="moveUp" data-id="${it.id}" aria-label="Move Up" title="上移">
