--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,11 @@
 
 
       if(act === "del"){
+        const it = items.find(x => x.id === id);
+        const label = it ? (it.name ? `${it.name} (${it.symbol})` : it.symbol) : id;
+        const ok = window.confirm(`确认删除：${label}？\n此操作不可恢复。`);
+        if(!ok) return;
+
         items = items.filter(x => x.id !== id);
         persist();
         render();
